--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,53 @@
-# Configuration for Black.
-#
-# NOTE: you have to use single-quoted strings in TOML for regular expressions.
-# It's the equivalent of r-strings in Python.  Multiline strings are treated as
-# verbose regular expressions by Black.  Use [ ] to denote a significant space.
+[build-system]
+requires = ["setuptools>=67.8.0"]
+build-backend = "setuptools.build_meta"
 
-[tool.black]
-line-length = 88
-py36 = true
-include = '\.pyi?$'
-exclude = '''
-/(
-    \.git
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-)/
-'''
+[project]
+name = "mysync"
+version = "25.3.1"
+authors = [{name="Taro Sato", email="okomestudio@gmail.com"}]
+description = "mysync for Python"
+readme = "README.rst"
+requires-python = ">=3.12"
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: POSIX :: Linux",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Utilities",
+]
+dependencies = [
+    "watchdog==6.0.0",
+]
 
+[project.optional-dependencies]
+dev = [
+    "mypy==1.15.0",
+    "pre-commit==4.2.0",
+    "ruff==0.11.2",
+]
+
+test = [
+    "coverage[toml]==7.7.1",
+    "pytest==8.3.5",
+    "pytest-cov==6.0.0",
+    "pytest-mock==3.14.0",
+]
+
+[project.urls]
+"Homepage" = "https://github.com/okomestudio/mysync"
+"Buck Tracker" = "https://github.com/okomestudio/mysync/issues"
+
+[project.scripts]
+REPONAME = "mysync.__main__:main"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+license-files = ["LICENSE.txt"]
+include-package-data = true
+package-data = {"mysync" = []}
 
 [tool.coverage.report]
 exclude_lines = [
@@ -34,7 +61,29 @@ exclude_lines = [
     "raise NotImplementedError",
 ]
 
+[tool.pytest.ini_options]
+minversion = "8.3"
+addopts = "-vv --cov=mysync --cov-report=term-missing"
+testpaths = [
+    "tests",
+]
 
-[tool.isort]
-line_length = 88
-force_single_line = true
+[tool.ruff]
+target-version = "py312"
+
+[tool.ruff.lint]
+extend-select = ["I"]
+
+[tool.mypy]
+python_version = "3.12"
+check_untyped_defs = true
+disallow_any_unimported = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+show_error_codes = true
+warn_return_any = true
+warn_unused_ignores = true
+
+[[tool.mypy.overrides]]
+  module = []
+  ignore_missing_imports = true
